--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -15,11 +15,9 @@ INCLUDES = \
 	$(GNUTLS_CFLAGS) \
 	$(SASL_CFLAGS) \
 	$(SELINUX_CFLAGS) \
-        -D_XOPEN_SOURCE=600 -D_POSIX_C_SOURCE=199506L \
         -DGETTEXT_PACKAGE=\"$(PACKAGE)\" \
          $(COVERAGE_CFLAGS) \
-         $(WARN_CFLAGS)	\
-	 $(LIBVIRT_FEATURES)
+         $(WARN_CFLAGS)
 
 LDADDS = \
 	@STATIC_BINARIES@ \
