add new logging module, and move existing definitions there * src/logging.c src/logging.h proxy/Makefile.am proxy/libvirt_proxy.c   src/Makefile.am src/cgroup.c src/datatypes.c src/domain_event.c   src/internal.h src/libvirt.c src/lxc_container.c src/lxc_controller.c   src/lxc_driver.c src/proxy_internal.c src/qemu_driver.c   src/remote_internal.c src/storage_backend_disk.c src/util.c   src/veth.c src/xen_internal.c src/xen_unified.c src/xend_internal.c:   add new logging module, and move existing definitions there Daniel

--- a/proxy/Makefile.am
+++ b/proxy/Makefile.am
@@ -18,7 +18,8 @@ libvirt_proxy_SOURCES = libvirt_proxy.c @top_srcdir@/src/xend_internal.c \
             @top_srcdir@/src/domain_conf.c \
             @top_srcdir@/src/util.c \
 	    @top_srcdir@/src/event.c \
-	    @top_srcdir@/src/uuid.c
+	    @top_srcdir@/src/uuid.c \
+	    @top_srcdir@/src/logging.c
 libvirt_proxy_LDFLAGS = $(WARN_CFLAGS) $(XEN_LIBS)
 libvirt_proxy_DEPENDENCIES =
 libvirt_proxy_LDADD = ../gnulib/lib/libgnu.la
