--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -7,6 +7,7 @@ src/datatypes.c
 src/domain_conf.c
 src/iptables.c
 src/libvirt.c
+src/lxc_conf.c
 src/lxc_container.c
 src/lxc_controller.c
 src/lxc_driver.c
