--- a/configure.in
+++ b/configure.in
@@ -1076,6 +1076,7 @@ AC_OUTPUT(Makefile src/Makefile include/Makefile docs/Makefile \
 	  gnulib/lib/Makefile \
 	  gnulib/tests/Makefile \
           libvirt.pc libvirt.spec mingw32-libvirt.spec \
+          src/libvirt_sym.version \
           po/Makefile.in \
 	  include/libvirt/Makefile include/libvirt/libvirt.h \
 	  python/Makefile python/tests/Makefile \
