--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -39,8 +39,12 @@ EXTRA_DIST =		\
 	domainschematest
 
 noinst_PROGRAMS = xmlrpctest xml2sexprtest sexpr2xmltest virshtest conftest \
-	reconnect xmconfigtest xencapstest qemuxml2argvtest qemuxml2xmltest \
+	reconnect xmconfigtest xencapstest \
         nodeinfotest statstest qparamtest
+
+if WITH_QEMU
+noinst_PROGRAMS += qemuxml2argvtest qemuxml2xmltest
+endif
 
 test_scripts = domainschematest
 if WITH_LIBVIRTD
@@ -58,10 +62,13 @@ endif
 EXTRA_DIST += $(test_scripts)
 
 TESTS = xml2sexprtest sexpr2xmltest virshtest xmconfigtest \
-        xencapstest qemuxml2argvtest qemuxml2xmltest nodeinfotest \
+        xencapstest nodeinfotest \
 	statstest qparamtest $(test_scripts)
 if ENABLE_XEN_TESTS
   TESTS += reconnect
+endif
+if WITH_QEMU
+TESTS += qemuxml2argvtest qemuxml2xmltest
 endif
 
 path_add = $$abs_top_builddir/src$(PATH_SEPARATOR)$$abs_top_builddir/qemud
@@ -105,6 +112,7 @@ xmconfigtest_SOURCES = \
 	testutils.c testutils.h
 xmconfigtest_LDADD = $(LDADDS)
 
+if WITH_QEMU
 qemuxml2argvtest_SOURCES = \
 	qemuxml2argvtest.c testutilsqemu.c testutilsqemu.h \
 	testutils.c testutils.h
@@ -114,6 +122,9 @@ qemuxml2xmltest_SOURCES = \
 	qemuxml2xmltest.c testutilsqemu.c testutilsqemu.h \
 	testutils.c testutils.h
 qemuxml2xmltest_LDADD = ../src/libvirt_driver_qemu.la $(LDADDS)
+else
+EXTRA_DIST += qemuxml2argvtest.c qemuxml2xmltest.c testutilsqemu.c testutilsqemu.h
+endif
 
 virshtest_SOURCES = \
 	virshtest.c \
