Add an initial User Mode Linux Driver

--- a/qemud/Makefile.am
+++ b/qemud/Makefile.am
@@ -99,6 +99,10 @@ if WITH_LXC
 libvirtd_LDADD += ../src/libvirt_driver_lxc.la
 endif
 
+if WITH_UML
+libvirtd_LDADD += ../src/libvirt_driver_uml.la
+endif
+
 if WITH_STORAGE_DIR
 libvirtd_LDADD += ../src/libvirt_driver_storage.la
 endif
